<resources>
    <string name="app_name">BMI_Calculator</string>
    <string name="textview">TextView</string>
    <string name="name">Name</string>
    <string name="name_txt"></string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="calculate_bmi">Calculate_BMI</string>
    <string name="bmi_calculator_app">BMI_Calculator_App</string>
    <string name="height_txt"></string>
    <string name="weight_txt"></string>
    <string name="underweight">und</string>
    <string name="normal">nor</string>
    <string name="overweight">ovr</string>
    <string name="obese">obe</string>
</resources>