<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="168dp"
        android:layout_marginTop="38dp"
        android:layout_marginEnd="186dp"
        android:layout_marginBottom="674dp"
        android:text="@string/bmi_calculator_app"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="38dp"
        android:layout_marginTop="126dp"
        android:layout_marginEnd="315dp"
        android:layout_marginBottom="62dp"
        android:text="@string/name"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="54dp"
        android:layout_height="18dp"
        android:layout_marginStart="38dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="315dp"
        android:layout_marginBottom="504dp"
        android:text="@string/height"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="38dp"
        android:layout_marginTop="94dp"
        android:layout_marginEnd="315dp"
        android:layout_marginBottom="381dp"
        android:text="@string/weight"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <EditText
        android:id="@+id/name_txt"
        android:layout_width="235dp"
        android:layout_height="62dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="59dp"
        android:layout_marginEnd="46dp"
        android:layout_marginBottom="569dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/name_txt"
        android:hint ="@string/name_txt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:ignore="DuplicateSpeakableTextCheck"
        android:autofillHints="" />

    <EditText
        android:id="@+id/height_txt"
        android:layout_width="232dp"
        android:layout_height="57dp"
        android:layout_marginStart="65dp"
        android:layout_marginTop="53dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="471dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/height_txt"
        android:hint = "@string/height_txt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/name_txt"
        android:autofillHints=""
        tools:ignore="TextFields" />

    <EditText
        android:id="@+id/weight_txt"
        android:layout_width="227dp"
        android:layout_height="57dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="66dp"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="360dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/weight_txt"
        android:inputType="textPersonName"
        android:text="@string/weight_txt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/height_txt"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="TextFields" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="146dp"
        android:layout_marginTop="77dp"
        android:layout_marginEnd="171dp"
        android:layout_marginBottom="235dp"
        android:text="@string/calculate_bmi"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weight_txt" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="96dp"
        android:layout_height="43dp"
        android:layout_marginStart="158dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="157dp"
        android:layout_marginBottom="136dp"
        android:text="@string/textview"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />
</androidx.constraintlayout.widget.ConstraintLayout>